# maverick

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.txt  generate_cmake_filelist.sh
src/: CMakeLists.txt  src_list.cmake
src/backend/: animatedobject.cc  animatedobject.h  atlasobject.h  bullet.cc  bullet.h  collision.cc  collision.h  effect.cc  effect.h  frameinput.cc  frameinput.h  frameinputsource.h  frameinputsourcejoystick.h  frameinputsourcekeyboard.h  gameconstants.h  playercharacter.cc  playercharacter.h  serverproxy.cc  serverproxy.h  ugdktiledfileloader.cc  ugdktiledfileloader.h
src/frontend/: debugtools.cc  debugtools.h  frontend.cc  frontend.h  main.cc  nativebuilders.h  serverproxy.cc  serverproxy.h
src/frontend/nativebuilders/: effectviewer.cc  effectviewer.h  gamescene.cc  gameviewerscene.cc  maprenderer.cc  maprenderer.h  objectviewer.cc  objectviewer.h  playercharacter.cc  playercharacter.h  playercharacterviewer.cc  playercharacterviewer.h
src/frontend/scenes/: console.cc  console.h
src/server/: platformingcore.cc  platformingcore.h
